# wasm_interface_proposal

./: .ammanrc.js  .solitarc.js  README.md  package.json
.crates/: .crates2.json
program/: Cargo.toml
program/node_test/: test.js
program/py_test/: test.py
program/src/: instruction.rs  interface.rs  lib.rs  processor.rs  state.rs
