[package]
name = "zero-copy-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
solana-program = "1.14.13"
shank = "0.0.10"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
rkyv = "0.7.39"
mpl-utils = "0.0.6"
#wasm-bindgen = {path = "../wasm-bindgen"}
wasm-bindgen = "0.2.84"

[patch.crates-io]
#wasm-bindgen = {path = "../wasm-bindgen"}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.14.13"
solana-sdk = "1.14.13"
solana-validator = "1.14.13"
solana-logger = "1.14.13"

[lib]
crate-type = ["cdylib", "lib"]
